[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/addons/HiddenDecor.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="HiddenDecor" type="Area2D"]
collision_layer = 256
collision_mask = 2
script = ExtResource( 1 )

[node name="HideTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_HiddenDecor_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_HiddenDecor_body_exited"]
[connection signal="timeout" from="HideTimer" to="." method="_on_HideTimer_timeout"]
